commit what i have
